# smartcity

./: README.md
LICENSE/: LICENSE
README.md/: README.md
SmartCity/: CMakeLists.txt
SmartCity/include/: CarLogic.hpp  Components.hpp  ParkingLogic.hpp  Simulation.hpp  Utils.hpp
SmartCity/src/: CarLogic.cpp  ParkingLogic.cpp  Simulation.cpp  Utils.cpp  main.cpp
SmartCity/tests/: TestTraffic.cpp
